changed layout of some pages.

--- a/artificial.html
+++ b/artificial.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a>
+    <!-- <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a> -->
     <!--Loader-->
     <div class="loader">
         <div class="bouncybox">
@@ -51,9 +51,9 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="certificate.html">IBM Global Certificate</a></li>
+                        <li><a href="certificate.html">IBM Global Certification Program</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specialization</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specializations</a>
                             <ul class="dropdown-menu">
                                 <li><a href="artificial.html">Artificial Intelligence</a></li>
                                 <li><a href="blockchain.html">Blockchain</a></li>
@@ -71,9 +71,9 @@
             </div>
         </nav>
 
-        <div class="navbar-fixed-top main-menu-continer menutop">
-            <button type="button" class="btn menubar-toggle styl" onclick="openNav()">
-                <!-- <i class="fa fa-bars"></i> -->Menu
+        <!-- <div class="navbar-fixed-top main-menu-continer menutop">
+            <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
+                <!-- <i class="fa fa-bars"></i> --Menu
             </button>
 
             <div id="mySidenav" class="sidenav">
@@ -123,7 +123,7 @@
                     <hr>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </header>
 
     <!--Slider-->
@@ -136,33 +136,6 @@
                     <!-- MAIN IMAGE -->
                     <img src="images/AI_banner.jpg" alt="" data-bgposition="center center" data-bgfit="cover"
                         data-bgparallax="10" class="rev-slidebg">
-                    <!-- LAYER NR. 1 -->
-                    <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
-                        data-hoffset="['0','0','0','0']" data-y="['326','270','270','150']"
-                        data-voffset="['0','0','0','0']" data-responsive_offset="on"
-                        data-visibility="['on','on','on','on']" data-transform_idle="o:1;"
-                        data-transform_in="z:0;rX:0;rY:0;rZ:0;sX:0.9;sY:0.9;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;"
-                        data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
-                        data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="800">
-                        <!-- <h1>Artificial Intelligence</h1> -->
-                    </div>
-                    <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
-                        data-hoffset="['0','0','0','0']" data-y="['380','340','300','350']"
-                        data-voffset="['0','0','0','0']" data-responsive_offset="on"
-                        data-visibility="['on','on','off','off']" data-transform_idle="o:1;"
-                        data-transform_in="opacity:0;s:1000;e:Power2.easeInOut;"
-                        data-transform_out="opacity:0;s:1000;s:1000;" data-start="1500">
-                        <!-- <p>Skill for better livelihood and stronger economy.</p> -->
-                    </div>
-                    <div class="tp-caption  tp-resizeme" data-x="['center','center','center','center']"
-                        data-hoffset="['0','0','0','0']" data-y="['450','390','350','250']"
-                        data-voffset="['0','0','0','0']" data-responsive_offset="on"
-                        data-visibility="['on','on','on','on']" data-transform_idle="o:1;"
-                        data-transform_in="y:[-200%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;"
-                        data-transform_out="auto:auto;s:1000;e:Power3.easeInOut;"
-                        data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" data-mask_out="x:0;y:0;s:inherit;e:inherit;"
-                        data-start="2000">
-                    </div>
                 </li>
             </ul>
         </div><!-- END REVOLUTION SLIDER -->
@@ -170,7 +143,7 @@
 
 
     <!--About course-->
-    <section id="ai">
+    <section id="ai" class="">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -186,11 +159,11 @@
                 </div>
             </div>
         </div>
-    </section><br>
+    </section>
     <!--About-->
 
     <!-- Video -->
-    <section id="video">
+    <!-- <section id="video">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -201,14 +174,14 @@
                             <!-- <iframe width="100%" height="315" src="video/Block_chain.mp4"></iframe> -->
                             <!-- <h1>Blockchain</h1> -->
                             <!-- <iframe src="https://player.vimeo.com/video/55806355" width="100%" height="360" frameborder="0"
-								webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
+								webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> --
                         </div>
                     </div>
                     <div class="col-md-3"></div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="padding" style="padding-bottom: 0px;">
         <div class="container">
@@ -236,23 +209,11 @@
         </div>
     </section>
 
-    <section id="ai">
+    <section id="ai" class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="heading bottom25">Skill Gap<span class="divider-left"></span></h3>
-                    <p class="text-justify">
-                        According to Sector Skills Council chief executive, The demand-supply gap for skills affected
-                        the industry's performance in 2018, due to shortage of 140,000 skilled techies for 500,000 jobs
-                        in the industry across verticals.
-                        "Going forward, the industry will face a shortage of 230,000 skilled techies as jobs in AI and
-                        Big Data are estimated to be 780,000 by 2021,"
-                    </p>
-                </div>
-            </div><br>
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 class="heading bottom25">Why Artificial Intelligence/Machine Learning?<span
+                    <h3 class="heading bottom25">Why Learn Artificial Intelligence/Machine Learning?<span
                             class="divider-left"></span></h3>
                     <p class="half_space text-justify">Artificial intelligence will shape our future more powerfully
                         than any other innovation this century. It makes it possible for the machines to learn from
@@ -260,11 +221,23 @@
                         professional from private and public sectors.
                     </p>
                 </div>
-            </div>
+            </div><br>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="heading bottom25">Global Skill Gap<span class="divider-left"></span></h3>
+                        <p class="text-justify">
+                            According to Sector Skills Council chief executive, The demand-supply gap for skills affected
+                            the industry's performance in 2018, due to shortage of 140,000 skilled techies for 500,000 jobs
+                            in the industry across verticals.
+                            "Going forward, the industry will face a shortage of 230,000 skilled techies as jobs in AI and
+                            Big Data are estimated to be 780,000 by 2021,"
+                        </p>
+                    </div>
+                </div>
         </div>
-    </section><br>
+    </section>
 
-    <section>
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -309,9 +282,9 @@
                 </div>
             </div>
         </div>
-    </section><br>
+    </section>
 
-    <section id="companies">
+    <!-- <section id="companies">
         <div class="container">
             <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
             <div class="row">
@@ -320,13 +293,13 @@
                 </div>
             </div>
         </div>
-    </section><br>
+    </section><br> -->
 
-    <section id="corseovr">
+    <section id="corseovr" class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="heading bottom25">Course Overview<span class="divider-left"></span></h2>
+                    <h2 class="heading bottom25">Artificial Intelligence/Machine Learning Overview<span class="divider-left"></span></h2>
                     <p class="half_space text-justify">This course helps to gain knowledge on how
                         artificial intelligence makes it possible for machines to learn from experience, adjust to new
                         inputs and perform human-like tasks. The audience will learn about the technologies like machine
@@ -340,7 +313,7 @@
     </section>
 
     <!-- Courses -->
-    <section class="">
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -395,11 +368,11 @@
     <!-- Courses -->
 
     <!-- skill development -->
-    <section class="">
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
+                    <h2 class="heading heading_space bottom25">IBM Unique Skill Development Ecosystem<span
                             class="divider-left"></span>
                     </h2>
                 </div>
@@ -409,6 +382,21 @@
                     <img class="img-responsive" src="images/IBM_ICE_skills.png" alt="skills">
                 </div>
             </div><br>
+        </div>
+    </section>
+
+    <section id="outcome" class="bottom25">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="heading heading_space bottom25">Artificial Intelligence/Machine Learning Outcome<span
+                        class="divider-left"></span>
+                    </h2>
+                    <p class="half_space text-justify">This course helps to gain knowledge on how
+                        artificial intelligence makes 
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -448,7 +436,10 @@
     <!-- modal end -->
 
     <!-- register float -->
-    <button class="open-button" href="">Click to Register</button>
+    <!-- <button class="open-button"><a  href="http://localhost/csp/register.php">Click to Register</a></button> -->
+    <button class="top-right">
+            <a href="">Register here</a>
+           </button>
 
     <!--FOOTER-->
     <footer>
