--- a/blockchain.html
+++ b/blockchain.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a>
+    <!-- <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a> -->
     <!--Loader-->
     <div class="loader">
         <div class="bouncybox">
@@ -51,9 +51,9 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="certificate.html">IBM Global Certificate</a></li>
+                        <li><a href="certificate.html">IBM Global Certificatation Program</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specialization</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specializations</a>
                             <ul class="dropdown-menu">
                                 <li><a href="artificial.html">Artificial Intelligence</a></li>
                                 <li><a href="blockchain.html">Blockchain</a></li>
@@ -71,9 +71,9 @@
             </div>
         </nav>
 
-        <div class="navbar-fixed-top main-menu-continer menutop">
+        <!-- <div class="navbar-fixed-top main-menu-continer menutop">
             <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
-                <!-- <i class="fa fa-bars"></i> -->Menu
+                <!-- <i class="fa fa-bars"></i> --Menu
             </button>
 
             <div id="mySidenav" class="sidenav">
@@ -123,7 +123,7 @@
                     <hr>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </header>
 
     <!--Slider-->
@@ -170,7 +170,7 @@
 
 
     <!--About course-->
-    <section id="ai">
+    <section id="ai" class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -185,13 +185,13 @@
                         fraud and tampering.
                     </p>
                 </div>
-            </div><br>
+            </div>
         </div>
     </section>
     <!--About-->
 
     <!-- Video -->
-    <section id="video">
+    <!-- <section id="video">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -202,14 +202,14 @@
                             <!-- <iframe width="100%" height="315" src="video/Block_chain.mp4"></iframe> -->
                             <!-- <h1>Blockchain</h1> -->
                             <!-- <iframe src="https://player.vimeo.com/video/55806355" width="100%" height="360" frameborder="0"
-								webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
+								webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> --
                         </div>
                     </div>
                     <div class="col-md-3"></div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
         <div class="container">
@@ -238,9 +238,18 @@
 
     <section id="ai">
         <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="heading bottom25">Why Learn Blockchain?<span class="divider-left"></span></h3>
+                        <p class="half_space text-justify">Blockchain technology is growing rapidly and its impact is very
+                            high on the industries. There is a huge demand for blockchain professional from private and
+                            public sectors.
+                        </p>
+                    </div>
+                </div><br>
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="heading bottom25">Skill Gap<span class="divider-left"></span></h3>
+                    <h3 class="heading bottom25">Global Skill Gap<span class="divider-left"></span></h3>
                     <p class="text-justify">
                         IBM and Mastercard have already filed more than 80 patents each for blockchain-related
                         technology, and companies are struggling to find sufficient talent to develop their initiatives.
@@ -254,20 +263,11 @@
                         the leading practical applications.
                     </p>
                 </div>
-            </div><br>
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 class="heading bottom25">Why Blockchain?<span class="divider-left"></span></h3>
-                    <p class="half_space text-justify">Blockchain technology is growing rapidly and its impact is very
-                        high on the industries. There is a huge demand for blockchain professional from private and
-                        public sectors.
-                    </p>
-                </div>
             </div>
         </div>
-    </section><br>
+    </section>
 
-    <section>
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -300,9 +300,9 @@
                 </div>
             </div>
         </div>
-    </section><br>
+    </section>
 
-    <section id="companies">
+    <!-- <section id="companies">
         <div class="container">
             <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
             <div class="row">
@@ -311,13 +311,13 @@
                 </div>
             </div>
         </div>
-    </section><br>
+    </section><br> -->
 
-    <section id="ai">
+    <section id="ai" class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="heading bottom25">Blockchain<span class="divider-left"></span></h2>
+                    <h2 class="heading bottom25">Blockchain Overview<span class="divider-left"></span></h2>
                     <p class="half_space text-justify">This course provides an overview on the blockchain, the
                         technologies involved in blockchain, the components of blockchain and its advantages. It helps
                         to gain knowledge on building the blockchain application using Hyperledger which includes
@@ -329,25 +329,8 @@
         </div>
     </section>
 
-    <!--course overview-->
-    <section id="ai">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2 class="heading bottom25">Course Overview<span class="divider-left"></span></h2>
-                    <p class="half_space text-justify">This course provides an overview on the blockchain, the
-                        technologies involved in blockchain, the components of blockchain and its advantages. It helps
-                        to gain knowledge on building the blockchain application using hyperledger which includes
-                        composer framework model, composer API’s etc. It also helps to develop application in several
-                        industries such as banking, finance, healthcare is also presented here.
-                    </p>
-                </div>
-            </div><br>
-        </div>
-    </section>
-
     <!-- Courses -->
-    <section class="">
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -400,15 +383,13 @@
     <!-- Courses -->
 
     <!-- skill development -->
-    <section class="">
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <center>
-                        <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
+                        <h2 class="heading heading_space bottom25">IBM Unique Skill Development Ecosystem<span
                                 class="divider-left"></span>
                         </h2>
-                    </center>
                 </div>
             </div>
             <div class="row">
@@ -418,6 +399,18 @@
             </div><br>
         </div>
     </section>
+
+    <section class="bottom25">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="heading bottom25">Blockchain Outcome<span class="divider-left"></span></h2>
+                        <p class="half_space text-justify">This course provides an overview on the blockchain, the
+                            technologies involved in blockchain, the components of blockchain and its advantages. 
+                    </div>
+                </div><br>
+            </div>
+        </section>
 
 
     <!--login modal-->
@@ -455,7 +448,10 @@
     <!-- modal end -->
 
     <!-- register float -->
-    <button class="open-button" href="">Click to Register</button>
+    <!-- <button class="open-button"><a  href="http://localhost/csp/register.php">Click to Register</a></button> -->
+    <button class="top-right">
+            <a href="">Register here</a>
+           </button>
 
     <!--FOOTER-->
     <footer>
