--- a/certificate.html
+++ b/certificate.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a>
+    <!-- <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a> -->
     <!--Loader-->
     <div class="loader">
         <div class="bouncybox">
@@ -51,9 +51,9 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="certificate.html">IBM Global Certificate</a></li>
+                        <li><a href="certificate.html">IBM Global Certification Program</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specialization</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specializations</a>
                             <ul class="dropdown-menu">
                                 <li><a href="artificial.html">Artificial Intelligence</a></li>
                                 <li><a href="blockchain.html">Blockchain</a></li>
@@ -71,9 +71,9 @@
             </div>
         </nav>
 
-        <div class="navbar-fixed-top main-menu-continer menutop">
+        <!-- <div class="navbar-fixed-top main-menu-continer menutop">
             <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
-                <!-- <i class="fa fa-bars"></i> -->Menu
+                <!-- <i class="fa fa-bars"></i> --Menu
             </button>
 
             <div id="mySidenav" class="sidenav">
@@ -123,7 +123,7 @@
                     <hr>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </header>
 
     <!--Slider-->
@@ -134,7 +134,7 @@
                 <!-- SLIDE  -->
                 <li data-transition="fade">
                     <!-- MAIN IMAGE -->
-                    <img src="images/certificate/banner_2.jpg" alt="" data-bgposition="center center" data-bgfit="cover"
+                    <img src="images/banner_2.png" alt="" data-bgposition="center center" data-bgfit="cover"
                         data-bgparallax="10" class="rev-slidebg">
                     <!-- LAYER NR. 1 -->
                     <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
@@ -264,7 +264,10 @@
     <!-- modal end -->
 
     <!-- register float -->
-    <button class="open-button" href="">Click to Register</button>
+    <!-- <button class="open-button"><a  href="http://localhost/csp/register.php">Click to Register</a></button> -->
+    <button class="top-right"> 
+                    <a href="">Register here</a>   
+                         </button>
 
     <!--FOOTER-->
     <footer>
