--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a>
+    <!-- <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a> -->
     <!--Loader-->
     <div class="loader">
         <div class="bouncybox">
@@ -51,9 +51,9 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="certificate.html">IBM Global Certificate</a></li>
+                        <li><a href="certificate.html">IBM Global Certification Program</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specialization</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specializations</a>
                             <ul class="dropdown-menu">
                                 <li><a href="artificial.html">Artificial Intelligence</a></li>
                                 <li><a href="blockchain.html">Blockchain</a></li>
@@ -71,9 +71,9 @@
             </div>
         </nav>
 
-        <div class="navbar-fixed-top main-menu-continer menutop">
+        <!-- <div class="navbar-fixed-top main-menu-continer menutop">
             <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
-                <!-- <i class="fa fa-bars"></i> -->Menu
+                <!-- <i class="fa fa-bars"></i> --Menu
             </button>
 
             <div id="mySidenav" class="sidenav">
@@ -123,7 +123,7 @@
                     <hr>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </header>
 
     <!--Slider-->
@@ -184,7 +184,7 @@
                             <p class="text-justify"><b>IBM Global Certiﬁcation Program Center</b></p>
                             <p class="text-justify"><i class="fa fa-map-marker" style="padding-right: 8px;color: #00abbd;"></i>NAD Rd, HMT Colony, North Kalamassery, HMT Kalamassery, Ernakulam, Kerala 6835033</p>
                             <p><i class="fa fa-phone" style="padding-right: 8px;color: #00abbd;"></i>080 4140 0440	</p>
-                            <p><i class="fa fa-envelope-o" style="padding-right: 8px;color: #00abbd;"></i>info@phemesoft.com</p>
+                            <p><i class="fa fa-envelope-o" style="padding-right: 8px;color: #00abbd;"></i>info@abc.com</p>
                         
                 </div>
                     <div class="col-md-8">
@@ -236,7 +236,10 @@
     <!-- modal end -->
 
     <!-- register float -->
-    <button class="open-button" href="">Click to Register</button>
+    <!-- <button class="open-button"><a  href="http://localhost/csp/register.php">Click to Register</a></button> -->
+    <button class="top-right">   
+                  <a href="">Register here</a> 
+                           </button>
 
     <!--FOOTER-->
     <footer>
