--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-  <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a>
+  <!-- <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a> -->
   <!--Loader-->
   <div class="loader">
     <div class="bouncybox">
@@ -35,6 +35,58 @@
     </div>
   </div>
 
+  
+
+  <!-- <div class="navbar-fixed-top main-menu-continer menutop">
+      <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
+      <!-- <i class="fa fa-bars"></i>  onmouseout="closeNav()" --Menu
+    </button>
+
+    <div id="mySidenav" class="sidenav">
+      <ul>
+        <li><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></li>
+        <li>
+          <a href="index.html"><img src="images/sidebar/home.ico"
+              style="height:30px!important;padding-right: inherit;" />Home</a></li>
+        <hr>
+        <li>
+          <a href="certificate.html"><img src="images/sidebar/certificate.ico"
+              style="height:30px!important;padding-right: inherit;" />IBM Global Certificate</a>
+        </li>
+        <hr>
+        <li>
+          <button class="dropdown-btn"><a><img src="images/sidebar/courses.ico"
+                style="height:30px!important;padding-right: inherit;" />Specialization<i class="fa fa-caret-down"
+                style="padding-left: 4px;font-size: large;"></i></a></button>
+          <ul class="dropdown-container">
+            <li> <a href="artificial.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Artificial
+                Intelligence</a></li>
+            <li><a href="blockchain.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Blockchain</a></li>
+            <li><a href="BA.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Business Analytics</a></li>
+            <li><a href="cybersecu.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Cyber Security</a>
+            </li>
+            <li><a href="datascience.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Data Science</a>
+            </li>
+            <li><a href="iot.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Internet of Things</a>
+            </li>
+          </ul>
+        </li>
+        <hr>
+        <li>
+          <a href=""><img src="images/sidebar/reg.ico"
+              style="height:30px!important;padding-right: inherit;" />Registration</a>
+        </li>
+        <hr>
+        <li>
+          <a href="contact.html"><img src="images/sidebar/contact.ico"
+              style="height:30px!important;padding-right: inherit;" />Contact</a>
+        </li>
+        <hr>
+      </ul>
+    </div>
+  </div> -->
+
+  <!-- <div id="main"> -->
   <!--Header-->
   <header>
     <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
@@ -52,9 +104,9 @@
         <div class="collapse navbar-collapse" id="navbar-menu">
           <ul class="nav navbar-nav navbar-right" data-in="fadeInDown">
             <li><a href="index.html">Home</a></li>
-            <li><a href="certificate.html">IBM Global Certificate</a></li>
+            <li><a href="certificate.html">IBM Global Certificatation Program</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specialization</a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specializations</a>
               <ul class="dropdown-menu">
                 <li><a href="artificial.html">Artificial Intelligence</a></li>
                 <li><a href="blockchain.html">Blockchain</a></li>
@@ -71,56 +123,8 @@
         </div>
       </div>
     </nav>
-
-    <div class="navbar-fixed-top main-menu-continer menutop">
-      <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
-        <!-- <i class="fa fa-bars"></i>  onmouseout="closeNav()" -->Menu
-      </button>
-
-      <div id="mySidenav" class="sidenav">
-        <ul>
-          <li><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></li>
-          <li>
-            <a href="index.html"><img src="images/sidebar/home.ico"
-                style="height:30px!important;padding-right: inherit;" />Home</a></li>
-          <hr>
-          <li>
-            <a href="certificate.html"><img src="images/sidebar/certificate.ico"
-                style="height:30px!important;padding-right: inherit;" />IBM Global Certificate</a>
-          </li>
-          <hr>
-          <li>
-            <button class="dropdown-btn"><a><img src="images/sidebar/courses.ico"
-                  style="height:30px!important;padding-right: inherit;" />Specialization<i class="fa fa-caret-down"
-                  style="padding-left: 4px;font-size: large;"></i></a></button>
-            <ul class="dropdown-container">
-              <li> <a href="artificial.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Artificial
-                  Intelligence</a></li>
-              <li><a href="blockchain.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Blockchain</a></li>
-              <li><a href="BA.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Business Analytics</a></li>
-              <li><a href="cybersecu.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Cyber Security</a>
-              </li>
-              <li><a href="datascience.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Data Science</a>
-              </li>
-              <li><a href="iot.html"><i class="fa fa-search" style="padding-right: 12px;"></i>Internet of Things</a>
-              </li>
-            </ul>
-          </li>
-          <hr>
-          <li>
-            <a href=""><img src="images/sidebar/reg.ico"
-                style="height:30px!important;padding-right: inherit;" />Registration</a>
-          </li>
-          <hr>
-          <li>
-            <a href="contact.html"><img src="images/sidebar/contact.ico"
-                style="height:30px!important;padding-right: inherit;" />Contact</a>
-          </li>
-          <hr>
-        </ul>
-      </div>
-    </div>
   </header>
+
 
   <!--Slider-->
   <section class="rev_slider_wrapper text-center">
@@ -130,9 +134,28 @@
         <!-- SLIDE  -->
         <li data-transition="fade" data-delay="2000" >
           <!-- MAIN IMAGE -->
-          <img id="baanner1" src="images/ai1.jpg" alt="banner" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
+          <img id="banner1" src="images/banner/banner1.jpg" alt="banner" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
             class="rev-slidebg" >
           <!-- LAYER NR. 1 -->
+          <!-- <div class="container">
+            <div class="row">
+              <div class="col-sm-6 col-sm-offset-6">
+                <form>
+                <h2>Welcome</h2>
+                <p>khgugv</p>
+                <div class="row">
+                    <div class="col-md-9">
+                        <input type="text" placeholder="First Name:"><br>
+                        <input type="text" placeholder="Last Name:"><br>
+                        <input type="email" placeholder="Email:"><br>
+                        <input type="tel" placeholder="Phone No:"><br>
+                        <button class="btn btn-success">Join Class today</button>
+                    </div>
+                </div>
+                </form>
+              </div>
+            </div>
+          </div> -->
           <!-- <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
             data-hoffset="['0','0','0','0']" data-y="['326','270','270','150']" data-voffset="['0','0','0','0']"
             data-responsive_offset="on" data-visibility="['on','on','on','on']" data-transform_idle="o:1;"
@@ -156,7 +179,7 @@
         </li>
 
         <li data-transition="fade" data-delay="2000">
-          <img src="images/BI_banner.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
+          <img src="images/banner/banner2.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
             class="rev-slidebg">
           <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
             data-hoffset="['0','0','0','0']" data-y="['326','270','270','150']" data-voffset="['0','0','0','0']"
@@ -183,7 +206,7 @@
           </div>
         </li>
         <li data-transition="fade" data-delay="2000">
-            <img src="images/blockchain_banner.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
+            <img src="images/banner/banner4.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
               class="rev-slidebg">
             <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
               data-hoffset="['0','0','0','0']" data-y="['326','270','270','150']" data-voffset="['0','0','0','0']"
@@ -209,8 +232,8 @@
               data-mask_out="x:0;y:0;s:inherit;e:inherit;" data-start="2000">
             </div>
           </li>
-          <li data-transition="fade" data-delay="2000">
-            <img src="images/Cybersecurity_banner.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
+          <!-- <li data-transition="fade" data-delay="2000">
+            <img src="images/banner/portrait-of-schoolgirl-standing-with-books-in-UDH3MZX.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
               class="rev-slidebg">
             <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
               data-hoffset="['0','0','0','0']" data-y="['326','270','270','150']" data-voffset="['0','0','0','0']"
@@ -218,7 +241,7 @@
               data-transform_in="z:0;rX:0;rY:0;rZ:0;sX:0.9;sY:0.9;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;"
               data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
               data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="800">
-              <!-- <h1>Your Library Is Your Paradise</h1> -->
+              <!-- <h1>Your Library Is Your Paradise</h1> --
             </div>
             <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
               data-hoffset="['0','0','0','0']" data-y="['380','340','300','350']" data-voffset="['0','0','0','0']"
@@ -226,7 +249,7 @@
               data-transform_in="opacity:0;s:1000;e:Power2.easeInOut;" data-transform_out="opacity:0;s:1000;s:1000;"
               data-start="1500">
               <!-- <p style="font-style: italic;">When the awareness of what is achievable brushes your life, your journey has
-                begun</p> -->
+                begun</p> --
             </div>
             <div class="tp-caption  tp-resizeme" data-x="['center','center','center','center']"
               data-hoffset="['0','0','0','0']" data-y="['450','390','350','250']" data-voffset="['0','0','0','0']"
@@ -237,7 +260,7 @@
             </div>
           </li>
           <li data-transition="fade" data-delay="2000">
-            <img src="images/IOT_banner_img.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
+            <img src="images/banner/woma-with-books-PBZZL2G.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
               class="rev-slidebg">
             <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
               data-hoffset="['0','0','0','0']" data-y="['326','270','270','150']" data-voffset="['0','0','0','0']"
@@ -245,7 +268,7 @@
               data-transform_in="z:0;rX:0;rY:0;rZ:0;sX:0.9;sY:0.9;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;"
               data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
               data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="800">
-              <!-- <h1>Your Library Is Your Paradise</h1> -->
+              <!-- <h1>Your Library Is Your Paradise</h1> --
             </div>
             <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
               data-hoffset="['0','0','0','0']" data-y="['380','340','300','350']" data-voffset="['0','0','0','0']"
@@ -253,7 +276,7 @@
               data-transform_in="opacity:0;s:1000;e:Power2.easeInOut;" data-transform_out="opacity:0;s:1000;s:1000;"
               data-start="1500">
               <!-- <p style="font-style: italic;">When the awareness of what is achievable brushes your life, your journey has
-                begun</p> -->
+                begun</p> --
             </div>
             <div class="tp-caption  tp-resizeme" data-x="['center','center','center','center']"
               data-hoffset="['0','0','0','0']" data-y="['450','390','350','250']" data-voffset="['0','0','0','0']"
@@ -272,7 +295,7 @@
               data-transform_in="z:0;rX:0;rY:0;rZ:0;sX:0.9;sY:0.9;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;"
               data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
               data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="800">
-              <!-- <h1>Your Library Is Your Paradise</h1> -->
+              <!-- <h1>Your Library Is Your Paradise</h1> --
             </div>
             <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
               data-hoffset="['0','0','0','0']" data-y="['380','340','300','350']" data-voffset="['0','0','0','0']"
@@ -280,7 +303,7 @@
               data-transform_in="opacity:0;s:1000;e:Power2.easeInOut;" data-transform_out="opacity:0;s:1000;s:1000;"
               data-start="1500">
               <!-- <p style="font-style: italic;">When the awareness of what is achievable brushes your life, your journey has
-                begun</p> -->
+                begun</p> --
             </div>
             <div class="tp-caption  tp-resizeme" data-x="['center','center','center','center']"
               data-hoffset="['0','0','0','0']" data-y="['450','390','350','250']" data-voffset="['0','0','0','0']"
@@ -289,12 +312,13 @@
               data-transform_out="auto:auto;s:1000;e:Power3.easeInOut;" data-mask_in="x:0px;y:0px;s:inherit;e:inherit;"
               data-mask_out="x:0;y:0;s:inherit;e:inherit;" data-start="2000">
             </div>
-          </li>
+          </li> -->
       </ul>
     </div><!-- END REVOLUTION SLIDER -->
   </section><br>
 
-
+  <!-- <div id="main"> -->
+<div class="container">
   <!--ABout US-->
   <section id="ibm">
     <div class="container margin10">
@@ -322,7 +346,7 @@
         </div>
         <div class="col-md-6">
           <div class="wrap">
-            <iframe width="100%" height="250" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+            <iframe width="100%" autoplay="true" height="250" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
             <!-- <iframe width="100%" height="315" src="video/Block_chain.mp4"></iframe> -->
             <!-- <h1>Blockchain</h1> -->
             <!-- <iframe src="https://player.vimeo.com/video/55806355" width="100%" height="360" frameborder="0"
@@ -387,7 +411,7 @@
         <div class="col-md-12 priorty">
           <h2 class="heading bottom25">IBM and ASAP Collaboration – CSP Kalamassery<span class="divider-left"></span>
           </h2>
-          <p class="text-justify margin10 half_space">AASAP has identified the need to tie up with a well-recognized
+          <p class="text-justify margin10 half_space">A ASAP has identified the need to tie up with a well-recognized
             organization, whose skill development methodologies, tools and capabilities are proven, whose certification
             is globally recognized. ASAP has opted IBM for operating the CSP at Kalamassery. IBM will deliver the IBM
             Certification of Advanced Technologies (iCAT) program at CSP or at the allocated centers. IBM shall provide
@@ -757,8 +781,12 @@
   </div> -->
   <!-- modal end -->
 
-  <button class="open-button" href="">Click to Register</button>
-
+  <!-- <button class="open-button"><a class="content" href="http://localhost/csp/register.php">Click to Register</a></button> -->
+  <button class="top-right">
+   <a href="">Register here</a>
+  </button>
+<!-- </div> -->
+</div>
 
   <!--FOOTER-->
   <!-- <footer class="padding-top">
@@ -813,7 +841,6 @@
   </footer>
   <!--FOOTER ends-->
 
-
   <script src="js/jquery-2.2.3.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/bootsnav.js"></script>
@@ -833,6 +860,8 @@
   <script src="js/functions.js"></script>
 
   <script>
+
+// $("#banner1").wrap($("<a>").attr("href", "contact.html"));
     //slider
 
     $('.carousel[data-type="multi"] .item').each(function () {
@@ -861,6 +890,18 @@
     function closeNav() {
       document.getElementById("mySidenav").style.display = "none";
     }
+
+//     function openNav() {
+//   document.getElementById("mySidenav").style.width = "250px";
+//   document.getElementById("main").style.marginLeft = "250px";
+//   // document.getElementById("contain").style.width ="970px";
+// }
+
+// function closeNav() {
+//   document.getElementById("mySidenav").style.width = "0";
+//   // document.getElementById("contain").style.width ="1170px";
+//   document.getElementById("main").style.marginLeft= "0";
+// }
 
     //  dropdown
     var dropdown = document.getElementsByClassName("dropdown-btn");
