--- a/iot.html
+++ b/iot.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a>
+    <!-- <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a> -->
     <!--Loader-->
     <div class="loader">
         <div class="bouncybox">
@@ -51,9 +51,9 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="certificate.html">IBM Global Certificate</a></li>
+                        <li><a href="certificate.html">IBM Global Certification Program</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specialization</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specializations</a>
                             <ul class="dropdown-menu">
                                 <li><a href="artificial.html">Artificial Intelligence</a></li>
                                 <li><a href="blockchain.html">Blockchain</a></li>
@@ -71,9 +71,9 @@
             </div>
         </nav>
 
-        <div class="navbar-fixed-top main-menu-continer menutop">
+        <!-- <div class="navbar-fixed-top main-menu-continer menutop">
             <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
-                <!-- <i class="fa fa-bars"></i> -->Menu
+                <!-- <i class="fa fa-bars"></i> --Menu
             </button>
 
             <div id="mySidenav" class="sidenav">
@@ -123,7 +123,7 @@
                     <hr>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </header>
 
     <!--Slider-->
@@ -185,13 +185,13 @@
                         value of their business.
                     </p>
                 </div>
-            </div><br>
+            </div>
         </div>
-    </section><br>
+    </section>
     <!--About-->
 
     <!-- Video -->
-    <section id="video">
+    <!-- <section id="video">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -202,14 +202,14 @@
                             <!-- <iframe width="100%" height="315" src="video/Block_chain.mp4"></iframe> -->
                             <!-- <h1>Blockchain</h1> -->
                             <!-- <iframe src="https://player.vimeo.com/video/55806355" width="100%" height="360" frameborder="0"
-								webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
+								webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> --
                         </div>
                     </div>
                     <div class="col-md-3"></div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
         <div class="container">
@@ -235,11 +235,20 @@
         </div>
     </section>
 
-    <section id="ai">
+    <section class="bottom25">
         <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="heading bottom25">Why Learn Internet of Things?<span class="divider-left"></span></h3>
+                        <p class="half_space text-justify">Internet of Things is a relatively new entrant thus, tends to pay
+                            high salaries to professionals in this sector. Public and Government sectors are offering
+                            attractive packages for Internet of Things professionals due to growing demands in market.
+                        </p>
+                    </div>
+                </div><br>
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="heading bottom25">Skill Gap<span class="divider-left"></span></h3>
+                    <h3 class="heading bottom25">Global Skill Gap<span class="divider-left"></span></h3>
                     <p class="text-justify">
                         Research from Immersat research program reveals that 33 percent of organizations would benefit
                         from additional skills, while 47 percent say they lack IoT skills altogether. According to Zebra
@@ -249,20 +258,11 @@
                         to the demand for the needed skills.
                     </p>
                 </div>
-            </div><br>
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 class="heading bottom25">Why IoT?<span class="divider-left"></span></h3>
-                    <p class="half_space text-justify">Internet of Things is a relatively new entrant thus, tends to pay
-                        high salaries to professionals in this sector. Public and Government sectors are offering
-                        attractive packages for Internet of Things professionals due to growing demands in market.
-                    </p>
-                </div>
             </div>
         </div>
-    </section><br>
+    </section>
 
-    <section>
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -294,9 +294,9 @@
                 </div>
             </div>
         </div>
-    </section><br>
+    </section>
 
-    <section id="companies">
+    <!-- <section id="companies">
         <div class="container">
             <center>
                 <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
@@ -305,13 +305,13 @@
                 <center><img class="img-responsive" src="images/datascience/companies.PNG" alt="company"></center>
             </div>
         </div>
-    </section><br>
+    </section><br> -->
 
-    <section id="ai">
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="heading bottom25">Course Overview<span class="divider-left"></span></h2>
+                    <h2 class="heading bottom25">Internet of Things Overview<span class="divider-left"></span></h2>
                     <p class="half_space text-justify">
                         This course covers in-depth concepts of IoT framework, IoT ecosystem, IoT solution architecture,
                         networking protocols and application layer protocols. It also provides case studies which will
@@ -322,19 +322,17 @@
                         the workplace.
                     </p>
                 </div>
-            </div><br>
+            </div>
         </div>
     </section>
 
     <!-- Courses -->
-    <section class="">
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <center>
                         <h2 class="heading heading_space bottom25">Subjects<span class="divider-left"></span>
                         </h2>
-                    </center>
                 </div>
             </div>
             <div class="row">
@@ -381,15 +379,13 @@
     <!-- Courses -->
 
     <!-- skill development -->
-    <section class="">
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <center>
-                        <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
+                        <h2 class="heading heading_space bottom25">IBM Unique Skill Development Ecosystem<span
                                 class="divider-left"></span>
                         </h2>
-                    </center>
                 </div>
             </div>
             <div class="row">
@@ -399,6 +395,21 @@
             </div><br>
         </div>
     </section>
+
+    <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="heading bottom25">Internet Of Things Outcome<span class="divider-left"></span></h2>
+                        <p class="half_space text-justify">
+                            IoT is short for Internet of Things. The Internet of Things refers to the fast-evolving network
+                            of physical objects with internet connectivity, and the communication between these objects and
+                            other Internet-enabled devices and systems. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
     <!--login modal-->
@@ -436,7 +447,10 @@
     <!-- modal end -->
 
     <!-- register float -->
-    <button class="open-button" href="">Click to Register</button>
+    <!-- <button class="open-button"><a  href="http://localhost/csp/register.php">Click to Register</a></button> -->
+    <button class="top-right">
+                     <a href="">Register here</a>   
+                             </button>
 
     <!--FOOTER-->
     <footer>
