--- a/cybersecu.html
+++ b/cybersecu.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a>
+    <!-- <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a> -->
     <!--Loader-->
     <div class="loader">
         <div class="bouncybox">
@@ -51,9 +51,9 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="certificate.html">IBM Global Certificate</a></li>
+                        <li><a href="certificate.html">IBM Global Certification Program</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specialization</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specializations</a>
                             <ul class="dropdown-menu">
                                 <li><a href="artificial.html">Artificial Intelligence</a></li>
                                 <li><a href="blockchain.html">Blockchain</a></li>
@@ -71,9 +71,9 @@
             </div>
         </nav>
 
-        <div class="navbar-fixed-top main-menu-continer menutop">
+        <!-- <div class="navbar-fixed-top main-menu-continer menutop">
             <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
-                <!-- <i class="fa fa-bars"></i> -->Menu
+                <!-- <i class="fa fa-bars"></i> --Menu
             </button>
 
             <div id="mySidenav" class="sidenav">
@@ -123,7 +123,7 @@
                     <hr>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </header>
 
     <!--Slider-->
@@ -134,7 +134,7 @@
                 <!-- SLIDE  -->
                 <li data-transition="fade">
                     <!-- MAIN IMAGE -->
-                    <img src="images/CS/CS-sub_banner.jpg" alt="" data-bgposition="center center" data-bgfit="cover"
+                    <img src="images/banner/cybersecurity_banner.jpg" alt="" data-bgposition="center center" data-bgfit="cover"
                         data-bgparallax="10" class="rev-slidebg">
                     <!-- LAYER NR. 1 -->
                     <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
@@ -185,13 +185,13 @@
                         in the event of threats.
                     </p>
                 </div>
-            </div><br>
+            </div>
         </div>
-    </section><br>
+    </section>
     <!--About-->
 
     <!-- Video -->
-    <section id="video">
+    <!-- <section id="video">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -202,14 +202,14 @@
                             <!-- <iframe width="100%" height="315" src="video/Block_chain.mp4"></iframe> -->
                             <!-- <h1>Blockchain</h1> -->
                             <!-- <iframe src="https://player.vimeo.com/video/55806355" width="100%" height="360" frameborder="0"
-								webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
+								webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> --
                         </div>
                     </div>
                     <div class="col-md-3"></div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
         <div class="container">
@@ -234,11 +234,20 @@
         </div>
     </section>
 
-    <section id="ai">
+    <section id="">
         <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="heading bottom25">Why Learn Cyber Security?<span class="divider-left"></span></h3>
+                        <p class="half_space text-justify">Raising cybersecurity awareness is one of the main strategies of
+                            data protection and reduces the risks of cyber-attacks. Many organizations are developing
+                            programs to train to battle with cyber threats.
+                        </p>
+                    </div>
+                </div><br>
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="heading bottom25">Skill Gap<span class="divider-left"></span></h3>
+                    <h3 class="heading bottom25">Global Skill Gap<span class="divider-left"></span></h3>
                     <p class="text-justify">
                         As per World Economic Forum January 2019 report, in United States there are more than 200,000
                         cybersecurity skills requiring job vacancies.
@@ -247,20 +256,11 @@
                         unfilled cybersecurity jobs
                     </p>
                 </div>
-            </div><br>
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 class="heading bottom25">Why Cyber Security?<span class="divider-left"></span></h3>
-                    <p class="half_space text-justify">Raising cybersecurity awareness is one of the main strategies of
-                        data protection and reduces the risks of cyber-attacks. Many organizations are developing
-                        programs to train to battle with cyber threats.
-                    </p>
-                </div>
             </div>
         </div>
     </section><br>
 
-    <section>
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -292,9 +292,9 @@
                 </div>
             </div>
         </div>
-    </section><br>
+    </section>
 
-    <section id="companies">
+    <!-- <section id="companies">
         <div class="container">
             <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
             <div class="row">
@@ -303,13 +303,13 @@
                 </div>
             </div>
         </div>
-    </section><br>
+    </section><br> -->
 
-    <section id="ai">
+    <section id="">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="heading bottom25">Course Overview<span class="divider-left"></span></h2>
+                    <h2 class="heading bottom25">Cyber Security Overview<span class="divider-left"></span></h2>
                     <p class="half_space text-justify">
                         This course introduces the basic cyber security concepts, enables the student to identify root
                         causes of vulnerabilities in a network system and distinguish them from the threats from both
@@ -324,7 +324,7 @@
     </section>
 
     <!-- Courses -->
-    <section class="">
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -380,7 +380,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
+                    <h2 class="heading heading_space bottom25">IBM Unique Skill Development Ecosystem<span
                             class="divider-left"></span>
                     </h2>
                 </div>
@@ -392,6 +392,21 @@
             </div><br>
         </div>
     </section>
+
+    <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="heading bottom25">Cyber Security Outcome<span class="divider-left"></span></h2>
+                        <p class="half_space text-justify">
+                            This course introduces the basic cyber security concepts, enables the student to identify root
+                            causes of vulnerabilities in a network system and distinguish them from the threats from both
+                            inside and outside. 
+                        </p>
+                    </div>
+                </div><br>
+            </div>
+        </section>
 
 
     <!--login modal-->
@@ -429,7 +444,10 @@
     <!-- modal end -->
 
     <!-- register float -->
-    <button class="open-button" href="">Click to Register</button>
+    <!-- <button class="open-button"><a  href="http://localhost/csp/register.php">Click to Register</a></button> -->
+    <button class="top-right">
+            <a href="">Register here</a>
+           </button>
 
     <!--FOOTER-->
     <footer>
