--- a/datascience.html
+++ b/datascience.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a>
+    <!-- <a href="#" class="scrollToTop"><i class="fa fa-angle-up"></i></a> -->
     <!--Loader-->
     <div class="loader">
         <div class="bouncybox">
@@ -51,9 +51,9 @@
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOut">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="certificate.html">IBM Global Certificate</a></li>
+                        <li><a href="certificate.html">IBM Global Certification Program</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specialization</a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Specializations</a>
                             <ul class="dropdown-menu">
                                 <li><a href="artificial.html">Artificial Intelligence</a></li>
                                 <li><a href="blockchain.html">Blockchain</a></li>
@@ -71,9 +71,9 @@
             </div>
         </nav>
 
-        <div class="navbar-fixed-top main-menu-continer menutop">
+        <!-- <div class="navbar-fixed-top main-menu-continer menutop">
             <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
-                <!-- <i class="fa fa-bars"></i> -->Menu
+                <!-- <i class="fa fa-bars"></i> --Menu
             </button>
 
             <div id="mySidenav" class="sidenav">
@@ -123,7 +123,7 @@
                     <hr>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </header>
 
     <!--Slider-->
@@ -170,7 +170,7 @@
 
 
     <!--About course-->
-    <section id="ai">
+    <section id="ai" class="">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -185,13 +185,13 @@
                         the trend and predicting.
                     </p>
                 </div>
-            </div><br>
+            </div>
         </div>
-    </section><br>
+    </section>
     <!--About-->
 
     <!-- Video -->
-    <section id="video">
+    <!-- <section id="video">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -202,14 +202,14 @@
                             <!-- <iframe width="100%" height="315" src="video/Block_chain.mp4"></iframe> -->
                             <!-- <h1>Blockchain</h1> -->
                             <!-- <iframe src="https://player.vimeo.com/video/55806355" width="100%" height="360" frameborder="0"
-								webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
+								webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> --
                         </div>
                     </div>
                     <div class="col-md-3"></div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
         <div class="container">
@@ -234,11 +234,19 @@
         </div>
     </section>
 
-    <section id="ai">
+    <section class="bottom25">
         <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="heading bottom25">Why Learn Data Science?<span class="divider-left"></span></h3>
+                        <p class="half_space text-justify">Data Science hold the key to the future. There is a huge demand
+                            for data science professional from private and public sectors.
+                        </p>
+                    </div>
+                </div><br>
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="heading bottom25">Skill Gap<span class="divider-left"></span></h3>
+                    <h3 class="heading bottom25">Global Skill Gap<span class="divider-left"></span></h3>
                     <p class="text-justify">
                         As per the LinkedIn Workforce Report for US (August 2018), demand for data scientists is off the
                         charts, data science skills shortages are present in almost every large U.S. city. Nationally,
@@ -252,19 +260,11 @@
                         future.
                     </p>
                 </div>
-            </div><br>
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 class="heading bottom25">Why Data Science?<span class="divider-left"></span></h3>
-                    <p class="half_space text-justify">Data Science hold the key to the future. There is a huge demand
-                        for data science professional from private and public sectors.
-                    </p>
-                </div>
             </div>
         </div>
-    </section><br>
+    </section>
 
-    <section>
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -296,9 +296,9 @@
                 </div>
             </div>
         </div>
-    </section><br>
+    </section>
 
-    <section id="companies">
+    <!-- <section id="companies">
         <div class="container">
             <h2 class="heading">Companies Hiring<span class="divider-left"></span></h2>
             <div class="row">
@@ -307,13 +307,13 @@
                 </div>
             </div>
         </div>
-    </section><br>
+    </section><br> -->
 
-    <section id="ai">
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="heading bottom25">Course Overview<span class="divider-left"></span></h2>
+                    <h2 class="heading bottom25">Data Science Overview<span class="divider-left"></span></h2>
                     <p class="half_space text-justify">
                         Data Science (DS) is a new, exponentially-growing field, consisting of a set of tools and
                         techniques used to extract valuable information from data. Data Science is an interdisciplinary,
@@ -322,12 +322,12 @@
                         of datasets, visualizing the data and programming of data analysis tasks.
                     </p>
                 </div>
-            </div><br>
+            </div>
         </div>
-    </section><br>
+    </section>
 
     <!-- Courses -->
-    <section class="">
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -381,11 +381,11 @@
     <!-- Courses -->
 
     <!-- skill development -->
-    <section class="">
+    <section class="bottom25">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="heading heading_space bottom25">Skill Development Ecosystem<span
+                    <h2 class="heading heading_space bottom25">IBM Unique Skill Development Ecosystem<span
                             class="divider-left"></span>
                     </h2>
                 </div>
@@ -394,10 +394,23 @@
                 <div class="col-md-12">
                     <img class="img-responsive" src="images/IBM_ICE_skills.png" alt="skills">
                 </div>
-            </div><br>
+            </div>
         </div>
     </section>
 
+    <section class="bottom25">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="heading bottom25">Data Science Outcome<span class="divider-left"></span></h2>
+                        <p class="half_space text-justify">
+                            Data Science (DS) is a new, exponentially-growing field, consisting of a set of tools and
+                            techniques used to extract valuable information from data.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     <!--login modal-->
     <div class="container">
@@ -434,7 +447,10 @@
     <!-- modal end -->
 
     <!-- register float -->
-    <button class="open-button" href="">Click to Register</button>
+    <!-- <button class="open-button"><a  href="http://localhost/csp/register.php">Click to Register</a></button> -->
+    <button class="top-right">
+            <a href="">Register here</a>
+           </button>
 
     <!--FOOTER-->
     <footer>
